--- a/app/src/main/res/layout/item_album_pager.xml
+++ b/app/src/main/res/layout/item_album_pager.xml
@@ -5,7 +5,7 @@
     android:background="@android:color/black" >
 
 
-    <com.example.localalbum.widget.MatrixImageView
+    <com.zjianhao.widget.MatrixImageView
         android:id="@+id/image"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
