--- a/app/src/main/res/layout/tab_layout_main.xml
+++ b/app/src/main/res/layout/tab_layout_main.xml
@@ -21,19 +21,7 @@
         android:orientation="vertical">
         <!--android:theme="@style/AppTheme.AppBarOverlay">-->
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/main_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            style="@style/DrawerStyle"
-            android:navigationIcon="@drawable/ic_list_white"
-            app:layout_scrollFlags="scroll|enterAlways">
-
-            <!---->
-        </android.support.v7.widget.Toolbar>
-
-
+       <include layout="@layout/toolbar_layout"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/main_tab_layout"
