--- a/app/src/main/res/menu/drawable_home_main.xml
+++ b/app/src/main/res/menu/drawable_home_main.xml
@@ -13,7 +13,7 @@
         <item
             android:id="@+id/nav_search_photo"
             android:icon="@drawable/ic_search_white_24dp"
-            android:title="@string/find" />
+            android:title="@string/advanced_finding" />
 
         <item
             android:id="@+id/nav_take_picture"
