--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,13 @@
     <color name="colorAccent">#1976D2</color>
     <color name="blue_dark">#3F51B5</color>
     <color name="white">#ffffff</color>
+    <color name="windows_background">#fff0f2f1</color>
+
 
     <color name="gray_dividing">#ffcccccc</color>
+    <color name="txt_gray">#FF575756</color>
+    <color name="text_gray">#929292</color>
+    <color name="mid_transparent">#DD000000</color>
 
 
 
