--- a/app/src/main/res/layout/photo_detail_main.xml
+++ b/app/src/main/res/layout/photo_detail_main.xml
@@ -48,6 +48,8 @@
         android:layout_height="80dp"
         android:layout_gravity="bottom"
         android:background="@color/mid_transparent"
+
+
         >
 
         <LinearLayout
@@ -58,6 +60,8 @@
             android:layout_toLeftOf="@+id/photo_delete_ll"
             android:layout_centerVertical="true"
             android:layout_marginRight="30dp"
+
+
 
             >
 
@@ -81,7 +85,7 @@
 
         <LinearLayout
             android:id="@+id/photo_delete_ll"
-            android:layout_width="50dp"
+            android:layout_width="0dp"
             android:layout_height="50dp"
             android:orientation="vertical"
             android:layout_centerInParent="true"
@@ -93,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_delete_white_18dp"
                 android:layout_gravity="center_horizontal"
+                android:visibility="gone"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -101,6 +106,7 @@
                 android:text="@string/delete"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
+                android:visibility="gone"
 
                 />
 
@@ -114,7 +120,6 @@
             android:layout_toRightOf="@+id/photo_delete_ll"
             android:layout_centerVertical="true"
             android:layout_marginLeft="30dp"
-
             >
 
             <ImageView
