--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,9 @@
     <color name="text_gray">#929292</color>
     <color name="mid_transparent">#DD000000</color>
 
+    <color name="horizontal_line_bg">#ffd1d2d2</color>
+    <color name="dark_blue">#ff4a90e2</color>
+
 
 
 
